--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "eslint-config-next": "^13.0.7",
     "firebase": "^9.22.0",
     "formik": "^2.2.9",
