--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.0",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
@@ -27,6 +30,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animated-css": "^1.2.1",
     "react-awesome-reveal": "^4.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
@@ -34,6 +38,7 @@
     "react-medium-image-zoom": "^4.3.4",
     "react-owl-carousel": "^2.3.1",
     "react-photoswipe-gallery": "^2.2.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-responsive-masonry": "^2.1.5",
     "react-router-dom": "^5.1.2",
