--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/react-query": "^4.29.7",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
