--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.29.7",
     "animate.css": "^4.1.1",
+    "antd": "^5.5.1",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
     "eslint-config-next": "^13.0.7",
