--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "^13.0.7",
     "firebase": "^9.22.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.16",
     "html-react-parser": "^3.0.16",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -39,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-i18next": "^12.3.1",
+    "react-intersection-observer": "^9.4.3",
     "react-medium-image-zoom": "^4.3.4",
     "react-owl-carousel": "^2.3.1",
     "react-photoswipe-gallery": "^2.2.2",
