--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.4",
     "next": "^13.0.7",
     "next-i18next": "^13.2.2",
+    "next-seo": "^6.0.0",
     "ngrok": "^4.3.3",
     "nodemailer": "^6.9.2",
     "react": "^18.2.0",
