--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-fontawesome": "^1.7.1",
     "react-i18next": "^12.3.1",
     "react-intersection-observer": "^9.4.3",
